Fix overflow with new editor

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -53,6 +53,7 @@ trix-editor {
   left: 0;
 
   font-size: 18px; /* More comfortable for Arabic */
+  overflow: scroll;
 }
 
 @media (max-height: 820px) {
